# study-jhp_topsy_longt

./: README.md  atlas-dkt_labels.tsv  atlas-jhu_labels.csv  atlas-study_labels.csv  jhp_metadata.yaml  stats.ipynb  topsy_metadata.yaml
apps/averager/: MANIFEST.in  README.md  pyproject.toml
apps/averager/averager/: pipeline_description.json
apps/averager/averager/config/: snakebids.yml
apps/averager/averager/workflow/: Snakefile
scripts/: average-jhp.sh  average-topsy.sh
scripts/jhp-model/: all_models  metadata-map.yaml  models.yaml  run.sh
scripts/topsy-model/: all_models  metadata-map.yaml  models.yaml  run.sh
styles/: manuscript.mplstyle  nature.mplstyle  presentation.mplstyle  styles.py
